Updated hyperlinks and directory structure.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <small>
 <!--codes between these comments that will require changes -->
 		📺 Watch 
-        <a href="https://facebook.com/watch/?v=1819420889452929&rdid=wiiBMKqAbo8Ga2lL" target="_blank">TC9</a>
+        <a href="https://facebook.com/profile.php?id=61579310017234" target="_blank">TC9</a>
       for more information.</small>
 <!--codes between these comments that will require changes -->
     </div>
