Updated stylesheet link in index.html
Updated stylesheet link in index.html

--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
 <!--codes between these comments that will require changes -->
   <title>aeronje-git_setup</title>
 <!--codes between these comments that will require changes -->
-  <!-- <link rel="stylesheet" href="https://raw.githubusercontent.com/aeronje/landing_pages_scripts/main/git_setup/styles.css" /> -->
-	<link rel="stylesheet"
-      href="https://cdn.jsdelivr.net/gh/aeronje/landing_pages_scripts@main/styles.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/aeronje/landing_pages_scripts@main/git_setup/styles.css">
 </head>
 <body>
   <main class="main-container">
