--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@
       </a>
     </div>
   </footer>
-  <script src="js/main.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/aeronje/landing_pages_scripts@main/git_setup/main.js"></script>
 </body>
 </html>
